app/assets/stylesheets/global/chesnutt.scss
/* ... */
@media (max-width: $screen-xs-max) {
  #header {
    .site-title-container {
      .h1 {
        font-size: 6vw;
      }
    }
    .navbar-nav {
      font-size: .9em;
    }
  }
}

// Footer

#footer {
  font-family: $font-family-sans-serif;
  margin-bottom: 0;
  padding-bottom: 8em;
  padding-top: 1.5em;

  .footer_twitter {
    margin-top: 2.5em
  }

  .footer_content_warning {
    font-size: .7em;
  }

  .footer_info {
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

      .footer_logo {
        align-items: center;
        background-color: rgba(255, 255, 255, 0.07);
        margin: 1em;
        padding: 20px;

        // Make CDRH link 2 lines
        .cdrh_link {
          max-width: 32rem;
        }

      p {
        font-size: 1.4em;
        margin: 0;
        padding: 0;

        a {
          color: #fff;
        }
      }

      img {
        max-width: 100%;
      }
    }
  }

  a {
    color: $gold-metallic;
  }
}

.footer_additional_info {
  font-size: 1.4em;
  margin-top: 2em;
}

// Stick footer to bottom

#body-wrapper {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

#content-wrapper {
  flex-grow: 1;
}

// ================
// Item listing, top level pages
// ================

// Secondary page listing (see about the site main page)

.page_subnav {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;

  li {
    flex-grow: 1;
    list-style: none;
    min-width: 50%;
    text-align: center;

    a {
      border: 2px solid $brand-success;
      display: block;
      font-family: $font-family-sans-serif;
      margin: 10px;
      min-height: 100px;
      padding: 10px;

      &:hover {
        border: 2px solid $dark-purple;

        span {
          background-color:rgba(255, 255, 255, 1);
          text-decoration-color: $brand-success;
          text-decoration-thickness: 3px;
        }
      }
      
      span {
        background-color: rgba(255, 255, 255, 0.8);
        color: $link-color !important;
        display: inline-block;
        text-decoration: underline;
        font-size: 1.3em;
        padding: .1em .4em;
      }
    }
  }

  // repeating backgrounds

  li:nth-child(4n + 1) {
    a {
      background-image: image-url("marble_01.jpg");
    }
  }

  li:nth-child(4n + 2) {
    a {
      background-image: image-url("marble_02.jpg");
    }
  }

  li:nth-child(4n + 3) {
    a {
      background-image: image-url("marble_03.jpg");
    }
  }

  li:nth-child(4n + 4) {
    a {
      background-image: image-url("marble_04.jpg");
    }
  }

  li:nth-child(5n + 5) {
    a {
      background-image: image-url("marble_05.jpg");
    }
  }

  li:nth-child(6n + 6) {
    a {
      background-image: image-url("marble_06.jpg");
    }
  }

  li:nth-child(7n + 7) {
    a {
      background-image: image-url("marble_07.jpg");
    }
  }
}

// =======================
// Page decorative banners
// =======================

// Horizontal Banners

// Settings for all horizontal illustrations

// if screen > sm, place text over image
@media (min-width: $screen-sm) {
  .page_banner_outer {
    position: relative;
    z-index: 1;
  }

  .page_banner_illustration {
    position: absolute;
    top: 0;
    left: 0;
  }
}

// Style semi transparent background for page text 
.page_banner_text {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 20px 20px 10px 20px;
  position: relative;
  z-index: 4;

  h1 {
    margin: 0;
    padding: 0;
    font-size: 1.8em;
  }
}

// set illustration to cover entire area
.page_banner_illustration {
  background-size: cover;
}

// set width of outer and inner illustration holders 
// to 100%. note: tried 100vw, but it was too wide
.page_banner_outer,
.page_banner_illustration { 
  width: 100%;
}

// for larger screens, move semi transparent text 
// box to left
@media (min-width: $screen-lg) {
  .page_banner_text {
    width: 60%;
  }
}

// =====
// Repeat per horizontal banner

@mixin horizontal_bar($section, $img, $height) 
{
  .action_#{$section} {
    .page_banner_illustration {
      background-image: $img;
      height: $height;
    }
  }
  
  @media (min-width: $screen-sm) {
    .action_#{$section} {
      .page_banner_outer {
         height: $height;
      }
    }
  }
}

//Works
@include horizontal_bar (
  works,
  image-url("chesnutt-works.jpg"), 
  32vw
  );

// Resources
@include horizontal_bar (
  resources,
  image-url("chesnutt-resources.jpg"), 
  32vw
  );

// Reviews
@include horizontal_bar (
  reception_reviews,
  image-url("chesnutt-resources.jpg"), 
  32vw
  );

// About - Biographical sketch
@include horizontal_bar (
  biographical_sketch,
  image-url("chesnutt-about.jpg"), 
  46vw
  );

// Vertical Banners

// Switch order of flex elements for large display
.flex.page_banner_vertical .flex_inner:nth-child(2) {
  margin-right: 20px;
  order: 1;
}

.flex.page_banner_vertical .flex_inner:nth-child(1) {
  order: 2;
}

@media (max-width: $screen-xs-max) {
  .flex.page_banner_vertical {
    display: block !important;

    .flex_inner:nth-child(2) {
      margin-right: 0;
    }
  }
}

.page_banner_vertical .page_illustration_outer {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: block;
}

// Manuscripts

@media (max-width: $screen-xs-max) {
  .action_manuscripts .flex.page_banner_vertical {
    .page_illustration_outer {
      max-height: 300px;
      width: 100%;
    }
  }
}

.action_manuscripts .page_illustration_outer {
  background-image: image-url("chesnutt-manuscripts.jpg");
  background-position: center;
  display: block;
  height: 800px;
  width: 400px;
}

// Reviews/Reception

@media (max-width: $screen-xs-max) {
  .action_reception_reviews .flex.page_banner_vertical {
    .page_illustration_outer {
      max-height: 300px;
      width: 100%
    }
  }
}
/* ... */

